redown data volume

--- a/LightweightFineTuning.ipynb
+++ b/LightweightFineTuning.ipynb
@@ -276,7 +276,7 @@
    },
    "outputs": [],
    "source": [
-    "train_size=10_000"
+    "train_size=1_000"
    ]
   },
   {
@@ -619,7 +619,22 @@
    "metadata": {
     "id": "e23b182b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fc92ddeb4a5a4350be06b352fbfff756",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "train_ds=create_dataset(iter_train_ds).shuffle(seed=seed)"
    ]
@@ -631,7 +646,22 @@
    "metadata": {
     "id": "54644c11-7de4-422c-93f8-9acb6118ec66"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f1f9a1c9fc174742b84b2799eeab99a6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "val_ds=create_dataset(iter_val_ds)"
    ]
@@ -643,7 +673,22 @@
    "metadata": {
     "id": "41287f0c-2cdc-45d4-861c-143fe3bc0456"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3708c1d220f94b20a2e48685f660f86c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "test_ds=create_dataset(iter_test_ds)"
    ]
@@ -849,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "89da212f",
    "metadata": {
     "colab": {
@@ -863,7 +908,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "61it [01:01,  1.01it/s]"
+      "164it [02:42,  1.01it/s]\n"
      ]
     }
    ],
@@ -873,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "b474fe72",
    "metadata": {
     "colab": {
@@ -882,7 +927,18 @@
     "id": "b474fe72",
     "outputId": "6b2acc79-fff7-41fa-937a-9940a2b94a59"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'perplexity': 24.5625}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "base_score"
    ]
@@ -899,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "rRMWDSaoVt1I",
    "metadata": {
     "id": "rRMWDSaoVt1I"
@@ -923,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "3e92f8af",
    "metadata": {
     "id": "3e92f8af"
@@ -935,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "fb7f6534",
    "metadata": {
     "colab": {
@@ -944,14 +1000,49 @@
     "id": "fb7f6534",
     "outputId": "95ff5a00-a099-47bb-a9fa-ba9fbcd87623"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OPTForCausalLM(\n",
+       "  (model): OPTModel(\n",
+       "    (decoder): OPTDecoder(\n",
+       "      (embed_tokens): Embedding(50272, 768, padding_idx=1)\n",
+       "      (embed_positions): OPTLearnedPositionalEmbedding(2050, 768)\n",
+       "      (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "      (layers): ModuleList(\n",
+       "        (0-11): 12 x OPTDecoderLayer(\n",
+       "          (self_attn): OPTAttention(\n",
+       "            (k_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (v_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (q_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (out_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          )\n",
+       "          (activation_fn): ReLU()\n",
+       "          (self_attn_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "          (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "          (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "          (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (lm_head): Linear(in_features=768, out_features=50272, bias=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "38c8640c",
    "metadata": {
     "id": "38c8640c"
@@ -963,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "949db024",
    "metadata": {
     "id": "949db024"
@@ -975,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "ETJ2Qrjc0WeH",
    "metadata": {
     "id": "ETJ2Qrjc0WeH"
@@ -996,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "E-swK20o0ppj",
    "metadata": {
     "id": "E-swK20o0ppj"
@@ -1008,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "BUIRl7c_2BvX",
    "metadata": {
     "colab": {
@@ -1017,14 +1108,22 @@
     "id": "BUIRl7c_2BvX",
     "outputId": "e4f1399f-558c-4ba2-83de-eb802745d6c3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trainable params: 10,616,832 || all params: 135,856,128 || trainable%: 7.814761215629522\n"
+     ]
+    }
+   ],
    "source": [
     "model.print_trainable_parameters()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "6nW2gu321IEB",
    "metadata": {
     "colab": {
@@ -1033,14 +1132,131 @@
     "id": "6nW2gu321IEB",
     "outputId": "7ee6ea0a-3289-403e-b885-b904c97019ba"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PeftModelForCausalLM(\n",
+       "  (base_model): LoraModel(\n",
+       "    (model): OPTForCausalLM(\n",
+       "      (model): OPTModel(\n",
+       "        (decoder): OPTDecoder(\n",
+       "          (embed_tokens): Embedding(50272, 768, padding_idx=1)\n",
+       "          (embed_positions): OPTLearnedPositionalEmbedding(2050, 768)\n",
+       "          (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "          (layers): ModuleList(\n",
+       "            (0-11): 12 x OPTDecoderLayer(\n",
+       "              (self_attn): OPTAttention(\n",
+       "                (k_proj): lora.Linear(\n",
+       "                  (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+       "                  (lora_dropout): ModuleDict(\n",
+       "                    (default): Dropout(p=0.01, inplace=False)\n",
+       "                  )\n",
+       "                  (lora_A): ModuleDict(\n",
+       "                    (default): Linear(in_features=768, out_features=64, bias=False)\n",
+       "                  )\n",
+       "                  (lora_B): ModuleDict(\n",
+       "                    (default): Linear(in_features=64, out_features=768, bias=False)\n",
+       "                  )\n",
+       "                  (lora_embedding_A): ParameterDict()\n",
+       "                  (lora_embedding_B): ParameterDict()\n",
+       "                )\n",
+       "                (v_proj): lora.Linear(\n",
+       "                  (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+       "                  (lora_dropout): ModuleDict(\n",
+       "                    (default): Dropout(p=0.01, inplace=False)\n",
+       "                  )\n",
+       "                  (lora_A): ModuleDict(\n",
+       "                    (default): Linear(in_features=768, out_features=64, bias=False)\n",
+       "                  )\n",
+       "                  (lora_B): ModuleDict(\n",
+       "                    (default): Linear(in_features=64, out_features=768, bias=False)\n",
+       "                  )\n",
+       "                  (lora_embedding_A): ParameterDict()\n",
+       "                  (lora_embedding_B): ParameterDict()\n",
+       "                )\n",
+       "                (q_proj): lora.Linear(\n",
+       "                  (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+       "                  (lora_dropout): ModuleDict(\n",
+       "                    (default): Dropout(p=0.01, inplace=False)\n",
+       "                  )\n",
+       "                  (lora_A): ModuleDict(\n",
+       "                    (default): Linear(in_features=768, out_features=64, bias=False)\n",
+       "                  )\n",
+       "                  (lora_B): ModuleDict(\n",
+       "                    (default): Linear(in_features=64, out_features=768, bias=False)\n",
+       "                  )\n",
+       "                  (lora_embedding_A): ParameterDict()\n",
+       "                  (lora_embedding_B): ParameterDict()\n",
+       "                )\n",
+       "                (out_proj): lora.Linear(\n",
+       "                  (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+       "                  (lora_dropout): ModuleDict(\n",
+       "                    (default): Dropout(p=0.01, inplace=False)\n",
+       "                  )\n",
+       "                  (lora_A): ModuleDict(\n",
+       "                    (default): Linear(in_features=768, out_features=64, bias=False)\n",
+       "                  )\n",
+       "                  (lora_B): ModuleDict(\n",
+       "                    (default): Linear(in_features=64, out_features=768, bias=False)\n",
+       "                  )\n",
+       "                  (lora_embedding_A): ParameterDict()\n",
+       "                  (lora_embedding_B): ParameterDict()\n",
+       "                )\n",
+       "              )\n",
+       "              (activation_fn): ReLU()\n",
+       "              (self_attn_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "              (fc1): lora.Linear(\n",
+       "                (base_layer): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "                (lora_dropout): ModuleDict(\n",
+       "                  (default): Dropout(p=0.01, inplace=False)\n",
+       "                )\n",
+       "                (lora_A): ModuleDict(\n",
+       "                  (default): Linear(in_features=768, out_features=64, bias=False)\n",
+       "                )\n",
+       "                (lora_B): ModuleDict(\n",
+       "                  (default): Linear(in_features=64, out_features=3072, bias=False)\n",
+       "                )\n",
+       "                (lora_embedding_A): ParameterDict()\n",
+       "                (lora_embedding_B): ParameterDict()\n",
+       "              )\n",
+       "              (fc2): lora.Linear(\n",
+       "                (base_layer): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "                (lora_dropout): ModuleDict(\n",
+       "                  (default): Dropout(p=0.01, inplace=False)\n",
+       "                )\n",
+       "                (lora_A): ModuleDict(\n",
+       "                  (default): Linear(in_features=3072, out_features=64, bias=False)\n",
+       "                )\n",
+       "                (lora_B): ModuleDict(\n",
+       "                  (default): Linear(in_features=64, out_features=768, bias=False)\n",
+       "                )\n",
+       "                (lora_embedding_A): ParameterDict()\n",
+       "                (lora_embedding_B): ParameterDict()\n",
+       "              )\n",
+       "              (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "            )\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (lm_head): Linear(in_features=768, out_features=50272, bias=False)\n",
+       "    )\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "XOa3NknE5Lld",
    "metadata": {
     "id": "XOa3NknE5Lld"
@@ -1052,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "3yCVWGBa2EE-",
    "metadata": {
     "id": "3yCVWGBa2EE-"
@@ -1064,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "c-RBrxAG3GJ8",
    "metadata": {
     "id": "c-RBrxAG3GJ8"
@@ -1076,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "JOc20SvhJJtt",
    "metadata": {
     "id": "JOc20SvhJJtt"
@@ -1088,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "de45243c-5bf1-45f6-accb-82319023794c",
    "metadata": {
     "id": "de45243c-5bf1-45f6-accb-82319023794c"
@@ -1100,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "fp0Z8HdR5PxE",
    "metadata": {
     "id": "fp0Z8HdR5PxE"
@@ -1129,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "5rZ8eHhdA90N",
    "metadata": {
     "id": "5rZ8eHhdA90N"
@@ -1141,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "u53rFXrLA1KU",
    "metadata": {
     "id": "u53rFXrLA1KU"
@@ -1159,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "8c315c9b-bee2-49b7-a4d3-c81abc4ff1cc",
    "metadata": {
     "id": "8c315c9b-bee2-49b7-a4d3-c81abc4ff1cc"
@@ -1182,7 +1398,36 @@
     "id": "nAeg-QF2Bgxf",
     "outputId": "bf5090b2-f498-4112-cbaa-9090deddefe7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='450' max='25608' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [  450/25608 05:18 < 4:58:23, 1.41 it/s, Epoch 0.05/3]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "trainer.train()"
    ]
