--- a/LightweightFineTuning.ipynb
+++ b/LightweightFineTuning.ipynb
@@ -700,7 +700,7 @@
     "id": "gPRV6SZ2KHYg"
    },
    "source": [
-    "I will load the model in NF4, as described in the QLoRA paper. The computation will be performed using Brain Float 16-bit precision."
+    "I will load the model in NF4 and use double quantization, as described in the QLoRA paper. The computation will be performed using Brain Float 16-bit precision."
    ]
   },
   {
@@ -1042,14 +1042,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "38c8640c",
+   "execution_count": null,
+   "id": "91a49281-f6f6-4192-af44-e5cc2e65fef0",
    "metadata": {
     "id": "38c8640c"
    },
    "outputs": [],
    "source": [
     "from peft import LoftQConfig, LoraConfig, get_peft_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ecf7d23-73f5-49e4-bf32-384cb496dcaf",
+   "metadata": {},
+   "source": [
+    "Adjust the quantization bit to 4 and incorporate 10 iterations of LoftQ in the configuration."
    ]
   },
   {
@@ -1315,6 +1323,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a6339037-2aa7-4817-b5b2-726a980f1e58",
+   "metadata": {},
+   "source": [
+    "I set the optimizer to lion with have record for only one momentom and I will quantized to 8bit and move the paged memory to cpu."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "id": "fp0Z8HdR5PxE",
@@ -1405,8 +1421,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='8590' max='25608' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 8590/25608 1:44:03 < 3:26:11, 1.38 it/s, Epoch 1.01/3]\n",
+       "      <progress value='14112' max='25608' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [14112/25608 2:48:50 < 2:17:33, 1.39 it/s, Epoch 1.65/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -1526,6 +1542,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e475c790-bfbd-4e52-97e7-ac9eb8121244",
+   "metadata": {},
+   "source": [
+    "I merged the QLoRA weights with the original ones to enable faster inference."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8b58ba20-c528-4a18-afa5-40b868e9df79",
@@ -1591,6 +1615,14 @@
    "outputs": [],
    "source": [
     "base_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6473cf4-e9a7-4fd2-8bc5-d955dd27733c",
+   "metadata": {},
+   "source": [
+    "We can see that fine-tuning has improved perplexity."
    ]
   },
   {
