--- a/LightweightFineTuning.ipynb
+++ b/LightweightFineTuning.ipynb
@@ -1421,8 +1421,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='14112' max='25608' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [14112/25608 2:48:50 < 2:17:33, 1.39 it/s, Epoch 1.65/3]\n",
+       "      <progress value='25608' max='25608' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [25608/25608 5:10:23, Epoch 2/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -1438,6 +1438,16 @@
        "      <td>1.600400</td>\n",
        "      <td>1.527814</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1.468100</td>\n",
+       "      <td>1.490909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1.390700</td>\n",
+       "      <td>1.482334</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -1447,6 +1457,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=25608, training_loss=1.5175122290765892, metrics={'train_runtime': 18624.7305, 'train_samples_per_second': 5.5, 'train_steps_per_second': 1.375, 'total_flos': 1.2042190267298611e+17, 'train_loss': 1.5175122290765892, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1536,7 +1556,124 @@
     "id": "3ebd553d",
     "outputId": "f4f75282-94e0-4549-b30c-ca5003717fca"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PeftModelForCausalLM(\n",
+       "  (base_model): LoraModel(\n",
+       "    (model): OPTForCausalLM(\n",
+       "      (model): OPTModel(\n",
+       "        (decoder): OPTDecoder(\n",
+       "          (embed_tokens): Embedding(50272, 768, padding_idx=1)\n",
+       "          (embed_positions): OPTLearnedPositionalEmbedding(2050, 768)\n",
+       "          (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "          (layers): ModuleList(\n",
+       "            (0-11): 12 x OPTDecoderLayer(\n",
+       "              (self_attn): OPTAttention(\n",
+       "                (k_proj): lora.Linear(\n",
+       "                  (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+       "                  (lora_dropout): ModuleDict(\n",
+       "                    (default): Dropout(p=0.01, inplace=False)\n",
+       "                  )\n",
+       "                  (lora_A): ModuleDict(\n",
+       "                    (default): Linear(in_features=768, out_features=64, bias=False)\n",
+       "                  )\n",
+       "                  (lora_B): ModuleDict(\n",
+       "                    (default): Linear(in_features=64, out_features=768, bias=False)\n",
+       "                  )\n",
+       "                  (lora_embedding_A): ParameterDict()\n",
+       "                  (lora_embedding_B): ParameterDict()\n",
+       "                )\n",
+       "                (v_proj): lora.Linear(\n",
+       "                  (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+       "                  (lora_dropout): ModuleDict(\n",
+       "                    (default): Dropout(p=0.01, inplace=False)\n",
+       "                  )\n",
+       "                  (lora_A): ModuleDict(\n",
+       "                    (default): Linear(in_features=768, out_features=64, bias=False)\n",
+       "                  )\n",
+       "                  (lora_B): ModuleDict(\n",
+       "                    (default): Linear(in_features=64, out_features=768, bias=False)\n",
+       "                  )\n",
+       "                  (lora_embedding_A): ParameterDict()\n",
+       "                  (lora_embedding_B): ParameterDict()\n",
+       "                )\n",
+       "                (q_proj): lora.Linear(\n",
+       "                  (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+       "                  (lora_dropout): ModuleDict(\n",
+       "                    (default): Dropout(p=0.01, inplace=False)\n",
+       "                  )\n",
+       "                  (lora_A): ModuleDict(\n",
+       "                    (default): Linear(in_features=768, out_features=64, bias=False)\n",
+       "                  )\n",
+       "                  (lora_B): ModuleDict(\n",
+       "                    (default): Linear(in_features=64, out_features=768, bias=False)\n",
+       "                  )\n",
+       "                  (lora_embedding_A): ParameterDict()\n",
+       "                  (lora_embedding_B): ParameterDict()\n",
+       "                )\n",
+       "                (out_proj): lora.Linear(\n",
+       "                  (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+       "                  (lora_dropout): ModuleDict(\n",
+       "                    (default): Dropout(p=0.01, inplace=False)\n",
+       "                  )\n",
+       "                  (lora_A): ModuleDict(\n",
+       "                    (default): Linear(in_features=768, out_features=64, bias=False)\n",
+       "                  )\n",
+       "                  (lora_B): ModuleDict(\n",
+       "                    (default): Linear(in_features=64, out_features=768, bias=False)\n",
+       "                  )\n",
+       "                  (lora_embedding_A): ParameterDict()\n",
+       "                  (lora_embedding_B): ParameterDict()\n",
+       "                )\n",
+       "              )\n",
+       "              (activation_fn): ReLU()\n",
+       "              (self_attn_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "              (fc1): lora.Linear(\n",
+       "                (base_layer): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "                (lora_dropout): ModuleDict(\n",
+       "                  (default): Dropout(p=0.01, inplace=False)\n",
+       "                )\n",
+       "                (lora_A): ModuleDict(\n",
+       "                  (default): Linear(in_features=768, out_features=64, bias=False)\n",
+       "                )\n",
+       "                (lora_B): ModuleDict(\n",
+       "                  (default): Linear(in_features=64, out_features=3072, bias=False)\n",
+       "                )\n",
+       "                (lora_embedding_A): ParameterDict()\n",
+       "                (lora_embedding_B): ParameterDict()\n",
+       "              )\n",
+       "              (fc2): lora.Linear(\n",
+       "                (base_layer): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "                (lora_dropout): ModuleDict(\n",
+       "                  (default): Dropout(p=0.01, inplace=False)\n",
+       "                )\n",
+       "                (lora_A): ModuleDict(\n",
+       "                  (default): Linear(in_features=3072, out_features=64, bias=False)\n",
+       "                )\n",
+       "                (lora_B): ModuleDict(\n",
+       "                  (default): Linear(in_features=64, out_features=768, bias=False)\n",
+       "                )\n",
+       "                (lora_embedding_A): ParameterDict()\n",
+       "                (lora_embedding_B): ParameterDict()\n",
+       "              )\n",
+       "              (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "            )\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (lm_head): Linear(in_features=768, out_features=50272, bias=False)\n",
+       "    )\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model"
    ]
@@ -1572,7 +1709,42 @@
     "id": "cfb5a17f-6db4-4ab2-ba8b-e1e9efc5ad69",
     "outputId": "ea293e93-5d3c-4b50-f3f4-f204d541aabb"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OPTForCausalLM(\n",
+       "  (model): OPTModel(\n",
+       "    (decoder): OPTDecoder(\n",
+       "      (embed_tokens): Embedding(50272, 768, padding_idx=1)\n",
+       "      (embed_positions): OPTLearnedPositionalEmbedding(2050, 768)\n",
+       "      (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "      (layers): ModuleList(\n",
+       "        (0-11): 12 x OPTDecoderLayer(\n",
+       "          (self_attn): OPTAttention(\n",
+       "            (k_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (v_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (q_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (out_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          )\n",
+       "          (activation_fn): ReLU()\n",
+       "          (self_attn_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "          (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "          (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "          (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (lm_head): Linear(in_features=768, out_features=50272, bias=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model"
    ]
@@ -1600,7 +1772,15 @@
     "id": "a0132683-8f71-44fb-840f-0e604354a33c",
     "outputId": "da5be471-26aa-463c-ba21-451155f806a6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "327it [03:14,  1.68it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "base_score=evaluate(model,test_ds,batch_size)"
    ]
@@ -1612,7 +1792,18 @@
    "metadata": {
     "id": "5e3bd1ef-55df-4b9c-95d1-7374f23d40a3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'perplexity': 9.781842231750488}"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "base_score"
    ]
@@ -1655,7 +1846,40 @@
     "id": "5b96642c-9695-4432-9eb5-c62e6546e95a",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on local URL:  http://127.0.0.1:7860\n",
+      "Sagemaker notebooks may require sharing enabled. Setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
+      "\n",
+      "Running on public URL: https://503b9c0a530b2e72c1.gradio.live\n",
+      "\n",
+      "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"https://503b9c0a530b2e72c1.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from transformers import pipeline\n",
     "import gradio as gr\n",
